# app-store-trends-mcp

./: README.md  pyproject.toml
src/app_store_trends_mcp/: __init__.py
